--- a/src/main/java/view/cadastroLivro.form
+++ b/src/main/java/view/cadastroLivro.form
@@ -121,7 +121,7 @@
                           <Component id="editoraTitle" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="autorTitle" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="tituloLivro" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="nome" alignment="0" pref="286" max="32767" attributes="0"/>
+                          <Component id="titulo" alignment="0" pref="286" max="32767" attributes="0"/>
                           <Component id="autor" alignment="0" max="32767" attributes="0"/>
                           <Component id="editora" alignment="0" max="32767" attributes="0"/>
                       </Group>
@@ -147,7 +147,7 @@
                   <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Component id="tituloLivro" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="nome" min="-2" max="-2" attributes="0"/>
+                  <Component id="titulo" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="autorTitle" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
@@ -183,7 +183,7 @@
             <Property name="text" type="java.lang.String" value="titulo:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="nome">
+        <Component class="javax.swing.JTextField" name="titulo">
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableLocal" type="java.lang.Boolean" value="false"/>
           </AuxValues>
